<resources>
    <string name="app_name">AliseHomeProject</string>
    <string name="otp">Get OTP</string>
    <string name="phonedatainfo">Enter Your    Phone Number</string>
    <string name="otpdata">Enter The    OTP</string>
    <string name="number">+91 9562673169</string>
    <string name="ok">ok</string>
    <string name="Notes">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_discover">Discover</string>
    <string name="notes">Notes</string>
    <string name="matches">Matches</string>
    <string name="Profile">Profile</string>
    <string name="data">Premium members can view all their likes at once</string>
    <string name="message">Personal messages to you</string>
    <string name="name">Meena,23</string>
    <string name="namedata">Meena</string>
    <string name="value">Tap to review 50+ notes</string>
</resources>