<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.example.alisehomeproject.Viewsmode.HighSemiBoldTextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#000000"
        android:text="@string/message"
        android:textSize="16sp" />
    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/likeorofile"
            app:riv_corner_radius="19dp" />

        <com.example.alisehomeproject.Viewsmode.HighBoldTextView
            android:id="@+id/tv_name_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginStart="36dp"
            android:textStyle="bold"
            android:layout_marginBottom="36dp"
            android:text="@string/name"

            android:textColor="#F2EEF3"
            android:textSize="20sp" />
        <com.example.alisehomeproject.Viewsmode.HighSemiBoldTextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:text="@string/value"

            android:textColor="#F2EEF3"
            android:textSize="14sp" />
    </FrameLayout>



</LinearLayout>